# coinco-house

./: .env.example  .gitignore  README.md  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py
backend/: app.py  pyproject.toml
backend/scripts/: monthly_email.py  weekly_email.py
backend/src/coinco_rep/: config.py  email_reports.py  main.py
backend/src/coinco_rep/api/routes/: auth.py  bills.py  categories.py  cron.py  dashboard.py  history.py  people.py  split.py  stays.py
backend/src/coinco_rep/auth/: dependencies.py  service.py
backend/src/coinco_rep/domain/: formatting.py  split.py
backend/src/coinco_rep/repositories/: bills.py  categories.py  db.py  households.py  people.py  stays.py
backend/tests/: test_auth.py  test_formatting.py  test_split.py
docs/: ios.md
frontend/: .env.mobile.example  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/scripts/: generate-icons.py
frontend/src/: main.ts  state.ts  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: billModal.ts  icons.ts  personModal.ts
frontend/src/styles/: tokens.css
frontend/src/views/: bills.ts  dashboard.ts  history.ts  login.ts  people.ts  split.ts
infra/: render.yaml
supabase/migrations/: 001_initial_schema.sql  002_seed_dev.sql  003_bills_split_mode.sql  004_people_email.sql  005_bills_fixed.sql
